--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,3 +1,56 @@
 body{
-    font-family: Arial, Arial, Helvetica, sans-serif
+    font: 15px/1.5 Arial, Helvetica, sans-serif;
+    padding:0;
+    margin:0;
+    background-color: aqua;
+
 }
+/* Global */
+.container{
+    width:80%;
+    margin:auto;
+    overflow:hidden;
+}
+
+/* Header **/
+header{
+    background:darkblue
+    color: #ffffff;
+    padding: top 30px;
+    min-height:70px;
+    border-bottom:#e8491d 3px solid;
+
+}
+
+header a{
+    color: black;
+    text-decoration: none;
+    text-transform: capitalize;
+    font: size 16px;
+}
+
+header u:{
+    margin:0;
+    padding:0;
+}
+
+header li{
+    float:left;
+    display:inline;
+    padding:0 20px 0 20px
+}
+
+header #branding{
+    float:left;
+}
+
+header #branding h1{
+    margin:0;
+}
+
+header nav{ 
+    float:right;
+    margin-top:10px;
+
+}
+
