--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,6 +1,7 @@
 body{
     font: 15px/1.5 Arial, Helvetica, sans-serif;
     padding:0;
+    
     margin:0;
     background-color: rgba(4, 194, 194, 0.365);
 
@@ -24,6 +25,7 @@ header{
 
 header a{
     color: black;
+    
     text-decoration: none;
     text-transform: capitalize;
     font: size 16px;
@@ -58,3 +60,7 @@ header .hightlight, header .current a{
     color:#01000268;
     font-weight-bold;
 }
+
+selector {
+    color: red;
+  }
