--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -6,6 +6,8 @@ body{
     background-color: rgba(0, 3, 3, 0.365);
 
 }
+
+
 /* Global */
 .container{
     width:80%;
@@ -16,8 +18,9 @@ body{
 
 /* Header **/
 header{
+
     background:rgb(3, 0, 7)
-    color: #ffffff;
+    color: crimson;
     padding: top 30px;
     min-height:70px;
     border-bottom:#e8491d 5px solid;
@@ -45,6 +48,7 @@ header li{
 
 header #branding{
     float:left;
+    color: crimson;
 }
 
 header #branding h1{
@@ -52,6 +56,7 @@ header #branding h1{
 }
 
 header nav{ 
+    color: crimson;
     float:right;
     margin-top:10px;
 
