--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -18,8 +18,7 @@ body{
 
 /* Header **/
 header{
-
-    background:rgb(3, 0, 7)
+    background:rgba(139, 4, 4, 0.869)
     padding: top 30px;
     min-height:70px;
     border-bottom:#e8491d 4x solid;
