--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -21,7 +21,7 @@ header{
     background:rgba(171, 7, 7, 0.869)
     padding: top 30px;
     min-height:70px;
-    border-bottom:#8b0000 4x solid;
+    border-bottom:#8b0000 4px solid;
 
 }
 
