--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -19,7 +19,7 @@ body{
 /* Header **/
 header{
     background:rgba(206, 3, 3, 0.919)
-    padding:top 30px;
+    padding;top 30px;
     min-height:70px;
     border-bottom:#8b0000 4px solid;
 
@@ -28,7 +28,7 @@ header{
 header a{
     text-decoration: none;
     text-transform: capitalize;
-    font: size 16px;
+    font-size: 16px;
 }
 
 header u:{
@@ -57,6 +57,6 @@ header nav{
 }
 
 header .hightlight, header .current a{
-
+    color:#603a9a68;
     font-weight-bold;
 }
