--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -19,7 +19,7 @@ body{
 /* Header **/
 header{
     background:rgba(206, 3, 3, 0.919)
-    padding;top 30px;
+    padding;top:30px;
     min-height:70px;
     border-bottom:#8b0000 4px solid;
 
