--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -20,7 +20,7 @@ header{
     background:rgba(206, 3, 3, 0.919)
     padding;top:30px;
     min-height:70px;
-    border-bottom:#8b0000 6px solid;
+    border-bottom:#8b0000 4px solid;
 
 }
 
@@ -57,5 +57,6 @@ header nav{
 
 header .hightlight, header .current a{
     color:#603a9a68;
-    font-weight-bold;
+    font-weight:bold;
 }
+
