--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,7 +1,6 @@
 body{
     font: 15px/1.5 Arial, Helvetica, sans-serif;
     padding:0;
-    
     margin:0;
     background-color: rgb(0, 0, 0);
 
@@ -17,6 +16,7 @@ body{
 
 /* Header **/
 header{
+    color: #8b0000;
     background:rgba(206, 3, 3, 0.919)
     padding;top:30px;
     min-height:70px;
@@ -56,7 +56,7 @@ header nav{
 }
 
 header .hightlight, header .current a{
-    color:#603a9a68;
+    color:#fd000032;
     font-weight:bold;
 }
 
