--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -103,13 +103,12 @@ header #About{
 }
 
 header #About h1{
-    margin:0;
-    padding-bottom: 0cap;
+    margin:0;   
     color: #8b0000;
 }
 header #About h2{
     margin:0;
-    height:43px;
+    padding-top: 1cap;
     color: #8b0000;
 }
 
