--- a/css/style.css
+++ b/css/style.css
@@ -72,14 +72,14 @@ header .hightlight, header .current a{
 }
 
 
-#Central{
+#Main-Section{
     min-height:400px;
 
     text-align:center;
 }
 
 
-#Central h1{
+#Main-Section h1{
     text-align: ;
     margin-top:100px;
     font-size:55px;
@@ -87,11 +87,16 @@ header .hightlight, header .current a{
     color:crimson;
 }
 
-#Central p{
+#Main-Section p{
     font-size:20px;
     color:#8b0000;
 }
 
+
+aside#sidebar{
+    float:right;
+    width:30%;
+}
 
 
 /* About.html */
@@ -118,3 +123,4 @@ header nav{
     color: #8b0000;
 
 }
+
