--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,10 @@ header .hightlight, header .current a{
 
 aside#sidebar{
     float:right;
-    width:30%;
+    width:20px;
+    margin-top:5px;
+    border-left:#b20a0ad9;
+    background-color: darkblue;
 }
 
 
