--- a/css/style1.css
+++ b/css/style1.css
@@ -1,141 +1,148 @@
 /* File covers about.html and index.html  */
 
-body{
+body {
     font: 15px/1.5 Arial, Helvetica, sans-serif;
-    padding:0;
-    margin:0;
+    padding: 0;
+    margin: 0;
     background-color: rgb(0, 0, 0);
 
 }
 
 
 /* Global */
-.container{
-    width:80%;
-    margin:auto;
-    overflow:hidden;
+.container {
+    width: 80%;
+    margin: auto;
+    overflow: hidden;
 }
 
 
-footer{
-    border-top:#890606 4px solid;
+footer {
+    border-top: #890606 4px solid;
 }
 
 /* Header */
-header{
-  
-    background:rgba(206, 3, 3, 0.919)
-    padding;top:30px;
-    min-height:70px;
-    border-bottom:#8b0000 4px solid;
+header {
+
+    background: rgba(206, 3, 3, 0.919) padding;
+    top: 30px;
+    min-height: 60px;
+    border-bottom: #8b0000 4px solid;
     color: #8b0000;
 }
 
-header a{
+header a {
     text-decoration: none;
     text-transform: capitalize;
     font-size: 16px;
     color: #8b0000;
 }
 
-header u{
-    margin:0;
-    padding:0;
+header u {
+    margin: 0;
+    padding: 0;
     color: #8b0000;
 }
 
-header li{
-    float:left;
-    display:inline;
-    padding:0 20px 0 20px;
+header li {
+    float: left;
+    display: inline;
+    padding: 0 20px 0 20px;
     color: #8b0000;
 }
 
-header #branding{
-    float:left;
+header #branding {
+    float: left;
     color: #8b0000;
 }
 
-header #branding h1{
-    margin:0;
+header #branding h1 {
+    margin: 0;
     color: #8b0000;
     padding-top: 4px;
 }
 
-header nav{ 
-    float:right;
-    margin-top:10px;
+header nav {
+    float: right;
+    margin-top: 10px;
     color: #8b0000;
 
 }
 
-header .hightlight, header .current a{
-    color:#e4d7d73d;
-    font-weight:bold;
+header .hightlight,
+header .current a {
+    color: #e4d7d73d;
+    font-weight: bold;
 }
 
 
-#Main-Section{
-    min-height:400px;
-    text-align:left;
+
+#Main-Section {
+    min-height: 200px;
+
 }
 
 
-#Main-Section h1{
-    margin-top:100px;
-    font-size:55px;
-    margin-bottom:10px;
-    color:rgb(74, 10, 24);
+#Main-Section h1 {
+    margin-top: 1.3px;
+    font-size: 55px;
+    margin-bottom: 3px;
+    color: rgb(74, 10, 24);
 }
 
-#Main-Section p{
-    width:80%;
+#Main-Section p {
+    width: 76%;
     float: left;
-    font-size:20px;
-    color:#8b0000;
+    font-size: 20px;
+    color: #8b0000;
+    text-align: left;
 }
 
 
-aside#sidebar{
-    float:right;
+aside#sidebar {
+
+    float: right;
     text-align: center;
-    width: 70px;
-    height: auto;
-    margin-top:10px;
-    border-left:#b20a0ad9 4px solid;
-    background-position: right;
+    width: 100px;
+    height: 100px;
     background-color: rgb(0, 0, 4);
-    text-align:left;
     padding-left: 30px;
     padding-right: 30px;
     padding-bottom: 10px;
-    color:#8b0000;
+    color: #8b0000;
     list-style: none;
-    
+
+
+    border-left: #b20a0ad9 4px solid;
+    border-right: #b20a0ad9 4px solid;
+    border-top: #b20a0ad9 4px solid;
+    margin: 80;
+
+
 }
 
 /* About.html */
 
 
-header #About{
-    float:left;
+header #About {
+    float: left;
     color: #8b0000;
 }
 
-header #About h1{
-    margin:0;   
+header #About h1 {
+    margin: 0;
     color: #8b0000;
 }
-header #About h2{
-    margin:0;
+
+header #About h2 {
+    margin: 0;
     padding-top: 1cap;
     color: #8b0000;
 }
 
-header nav{ 
-    float:right;
-    margin-top:10px;
+header nav {
+    float: right;
+    margin-top: 10px;
     color: #8b0000;
 
 }
-
