--- a/css/style1.css
+++ b/css/style1.css
@@ -51,12 +51,12 @@ header li {
     color: #8b0000;
 }
 
-header #branding {
+header #title {
     float: left;
     color: #8b0000;
 }
 
-header #branding h1 {
+header #title h1 {
     margin: 0;
     color: #8b0000;
     padding-top: 4px;
