--- a/css/style1.css
+++ b/css/style1.css
@@ -75,23 +75,20 @@ header .current a {
     font-weight: bold;
 }
 
-
-
-#Main-Section {
+#Section1 {
     min-height: 200px;
 
 }
 
-
-#Main-Section h1 {
+#Section1 h1 {
     margin-top: 1.3px;
     font-size: 55px;
     margin-bottom: 3px;
     color: rgb(74, 10, 24);
 }
 
-#Main-Section p {
-    width: 76%;
+#Section1 p {
+    width: 79%;
     float: left;
     font-size: 20px;
     color: #8b0000;
@@ -133,28 +130,7 @@ aside#sidebar {
 </aside>
 }  */
 
-/* About.html */
 
-
-header #About {
-    float: left;
-    color: #8b0000;
-}
-
-header #About h1 {
-    margin: 0;
-    color: #8b0000;
-}
-
-header #About h2 {
-    margin: 0;
-    padding-top: 1cap;
-    color: #8b0000;
-}
-
-header nav {
-    float: right;
-    margin-top: 10px;
-    color: #8b0000;
+#Section2{
 
 }
