--- a/css/style1.css
+++ b/css/style1.css
@@ -1,159 +1,187 @@
 /* File covers first few html files */
 
-body {
-    font: 15px/1.5 Arial, Helvetica, sans-serif;
-    padding: 0;
-    margin: 0;
-    background-color: rgb(0, 0, 0);
+    body {
+        font: 15px/1.5 Arial, Helvetica, sans-serif;
+        padding: 0;
+        margin: 0;
+        background-color: rgb(0, 0, 0);
+    
+    }
+    
+    
+    /* Global */
+    .container {
+        width: 80%;
+        margin: auto;
+        overflow: hidden;
+    }
+    
+    
+    footer {
+        border-top: #890606 4px solid;
+    }
+    
+    /* Header */
+    header {
+    
+        background: rgba(206, 3, 3, 0.919) padding;
+        top: 30px;
+        min-height: 60px;
+        border-bottom: #8b0000 4px solid;
+        color: #8b0000;
+    }
+    
+    header a {
+        text-decoration: none;
+        text-transform: capitalize;
+        font-size: 16px;
+        color: #8b0000;
+    }
+    
+    header u {
+        margin: 0;
+        padding: 0;
+        color: #8b0000;
+    }
+    
+    header li {
+        float: left;
+        display: inline;
+        padding: 0 20px 0 20px;
+        color: #8b0000;
+    }
+    
+    header #title {
+        float: left;
+        color: #8b0000;
+    }
+    
+    header #title h1 {
+        margin: 0;
+        color: #8b0000;
+        padding-top: 4px;
+    }
+    
+    header nav {
+        float: right;
+        margin-top: 10px;
+        color: #8b0000;
+    
+    }
+    
+    header .hightlight,
+    header .current a {
+        color: #e4d7d73d;
+        font-weight: bold;
+    }
+    
+    #Section1 {
+        min-height: 200px;
+    
+    }
+    
+    #Section1 h1 {
+        margin-top: 1.3px;
+        font-size: 55px;
+        margin-bottom: 3px;
+        color: rgb(74, 10, 24);
+        margin: 0.6px
+    }
+    
+    #Section1 p {
+        width: 79%;
+        float: left;
+        font-size: 20px;
+        color: #8b0000;
+        text-align: left;
+        margin: .2px;
+    }
+    
+    #Section2 {
+        min-height: 300px;
+    }
+    
+    
+    #Section2 h1 {
+        margin-top: 1.3px;
+        font-size: 45px;
+        margin-bottom: 3px;
+        color: rgb(74, 10, 24);
+        margin:0px;
+    }
+    
+    #Section2 p {
+        width: 79%;
+        font-size: 20px;
+        color: #8b0000;
+        text-align: left;
+        margin: 0.2px;
+        text-align: center;
+        margin:2px;
+    }
+    
+    #Section2 h3{
+        margin-top: 1.3px;
+        font-size: 34px;
+        margin-bottom: 3px;
+        color: rgb(74, 10, 24);
+        margin:0px;
+        text-align: center;
+    }
+    
+    #m h3{
+        margin: 2px;;
+          font-size: 34px;
+    }
+    .column {
+        float: left;
+        width: 50%;
 
-}
-
-
-/* Global */
-.container {
-    width: 80%;
-    margin: auto;
-    overflow: hidden;
-}
-
-
-footer {
-    border-top: #890606 4px solid;
-}
-
-/* Header */
-header {
-
-    background: rgba(206, 3, 3, 0.919) padding;
-    top: 30px;
-    min-height: 60px;
-    border-bottom: #8b0000 4px solid;
-    color: #8b0000;
-}
-
-header a {
-    text-decoration: none;
-    text-transform: capitalize;
-    font-size: 16px;
-    color: #8b0000;
-}
-
-header u {
-    margin: 0;
-    padding: 0;
-    color: #8b0000;
-}
-
-header li {
-    float: left;
-    display: inline;
-    padding: 0 20px 0 20px;
-    color: #8b0000;
-}
-
-header #title {
-    float: left;
-    color: #8b0000;
-}
-
-header #title h1 {
-    margin: 0;
-    color: #8b0000;
-    padding-top: 4px;
-}
-
-header nav {
-    float: right;
-    margin-top: 10px;
-    color: #8b0000;
-
-}
-
-header .hightlight,
-header .current a {
-    color: #e4d7d73d;
-    font-weight: bold;
-}
-
-#Section1 {
-    min-height: 200px;
-
-}
-
-#Section1 h1 {
-    margin-top: 1.3px;
-    font-size: 55px;
-    margin-bottom: 3px;
-    color: rgb(74, 10, 24);
-    margin: 0.6px
-}
-
-#Section1 p {
-    width: 79%;
-    float: left;
-    font-size: 20px;
-    color: #8b0000;
-    text-align: left;
-    margin: .2px;
-}
-
-#Section2 {
-    min-height: 300px;
-}
-
-
-#Section2 h1 {
-    margin-top: 1.3px;
-    font-size: 55px;
-    margin-bottom: 3px;
-    color: rgb(74, 10, 24);
-    margin: 0.6px
-}
-
-#Section2 p {
-    width: 79%;
-    float: left;
-    font-size: 20px;
-    color: #8b0000;
-    text-align: left;
-    margin: .2px;
-}
-
-
-
-
-
-/*
-Removed temporarily
-
-aside#sidebar {
-
-    float: right;
-    text-align: center;
-    width: 100px;
-    height: 100px;
-    background-color: rgb(0, 0, 4);
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-bottom: 10px;
-    color: #8b0000;
-    list-style: none;
-
-
-    border-left: #b20a0ad9 4px solid;
-    border-right: #b20a0ad9 4px solid;
-    border-top: #b20a0ad9 4px solid;
-    margin: 80;
-
-
-  html  <aside id="sidebar">
-    <h4></h4>
-    <li><a href="html/mod.html">Mods</a></li>
-    <li><a href="html/mod.html">Mods</a></li>
-    <li><a href="html/mod.html">Mods</a></li>
-    <li><a href="html/mod.html">Mods</a></li>
-
-</div> 
-</aside>
-}  */
-
+      }
+      
+    
+      .row:after {
+        content: "";
+        display: table;
+        clear: both;
+      }
+    
+    
+    
+    /*
+    Removed temporarily
+    
+    aside#sidebar {
+    
+        float: right;
+        text-align: center;
+        width: 100px;
+        height: 100px;
+        background-color: rgb(0, 0, 4);
+        padding-left: 30px;
+        padding-right: 30px;
+        padding-bottom: 10px;
+        color: #8b0000;
+        list-style: none;
+    
+    
+        border-left: #b20a0ad9 4px solid;
+        border-right: #b20a0ad9 4px solid;
+        border-top: #b20a0ad9 4px solid;
+        margin: 80;
+    
+    
+      html  <aside id="sidebar">
+        <h4></h4>
+        <li><a href="html/mod.html">Mods</a></li>
+        <li><a href="html/mod.html">Mods</a></li>
+        <li><a href="html/mod.html">Mods</a></li>
+        <li><a href="html/mod.html">Mods</a></li>
+    
+    </div> 
+    </aside>
+    }  */
+    
+    
+    
+    
