--- a/css/style1.css
+++ b/css/style1.css
@@ -97,91 +97,7 @@
         margin: .2px;
     }
     
-    #Section2 {
-        min-height: 300px;
-    }
-    
-    
-    #Section2 h1 {
-        margin-top: 1.3px;
-        font-size: 45px;
-        margin-bottom: 3px;
-        color: rgb(74, 10, 24);
-        margin:0px;
-    }
-    
-    #Section2 p {
-        width: 79%;
-        font-size: 20px;
-        color: #8b0000;
-        text-align: left;
-        margin: 0.2px;
-        text-align: center;
-        margin:2px;
-    }
-    
-    #Section2 h3{
-        margin-top: 1.3px;
-        font-size: 34px;
-        margin-bottom: 3px;
-        color: rgb(74, 10, 24);
-        margin:0px;
-        text-align: center;
-    }
-    
-    #m h3{
-        margin: 2px;;
-          font-size: 34px;
-    }
-    .column {
-        float: left;
-        width: 50%;
 
-      }
-      
-    
-      .row:after {
-        content: "";
-        display: table;
-        clear: both;
-      }
-    
-    
-    
-    /*
-    Removed temporarily
-    
-    aside#sidebar {
-    
-        float: right;
-        text-align: center;
-        width: 100px;
-        height: 100px;
-        background-color: rgb(0, 0, 4);
-        padding-left: 30px;
-        padding-right: 30px;
-        padding-bottom: 10px;
-        color: #8b0000;
-        list-style: none;
-    
-    
-        border-left: #b20a0ad9 4px solid;
-        border-right: #b20a0ad9 4px solid;
-        border-top: #b20a0ad9 4px solid;
-        margin: 80;
-    
-    
-      html  <aside id="sidebar">
-        <h4></h4>
-        <li><a href="html/mod.html">Mods</a></li>
-        <li><a href="html/mod.html">Mods</a></li>
-        <li><a href="html/mod.html">Mods</a></li>
-        <li><a href="html/mod.html">Mods</a></li>
-    
-    </div> 
-    </aside>
-    }  */
-    
-    
-    
-    
+#section h4{
+    text-align:center;
+}
